--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -8,16 +8,20 @@
 		.box {
 			width: 70px;
 			height: 70px;
-			background-color: teal;
+			background-color: rgb(39, 114, 255);
 			font-size: 300%;
 			text-align: center;
+			color: white;
 			display: block;
 			position: absolute;
 			top: 100px;
-			left:100;  /* <--- Change me! */
+			left: 100px;  /* <--- Change me! */
+			border-style: double;
+			border-color: rgb(65, 0, 119);
 		}
 		.board{
 			height: 100vh;
+			background-color: #d497fd;
 		}
 	</style>
 	<!-- 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
@@ -47,8 +51,9 @@
 			box.on('click', handleBoxClick);
 
 			// moves the Box to a new position on the screen along the X-Axis
-			function moveBoxTo(newPositionX) {
+			function moveBoxTo(newPositionX, newPositionY) {
 				box.css("left", newPositionX);
+				box.css("top", newPositionY);
 			}
 
 			// changes the text displayed on the Box
@@ -63,17 +68,34 @@
 			// TODO 2 - Variable declarations 
 			
 			var positionX = 0;
-			var points = 0
-			
+			var points = 0;
+			var speed = 10;
+			var positionY = 0;
+			var speedY = 10;
+			var boardHeight = jQuery(window).height();
+			var colorStr = "rgb(50, 25, 250)";
+
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
 			it should move the Box to a new location. If the box drifts off the screen
 			turn it around! 
 			*/
 			function update() {
-				positionX = positionX + 10;
-				moveBoxTo(positionX);
-
+				positionX = positionX + speed;
+				positionY = positionY + speedY;
+				moveBoxTo(positionX, positionY);
+				if (positionX > boardWidth) {
+					speed = -speed;
+				}
+				if (positionX < 0) {
+					speed = -speed;
+				}
+				if (positionY > boardHeight) {
+					speedY = -speedY;
+				}
+				if (positionY < 0) {
+					speedY = -speedY;
+				}
 			};
 
 			/* 
@@ -83,8 +105,12 @@
 			*/
 			function handleBoxClick() {
 				positionX = 0;
+				positionY = 0
 				points = points + 1;
 				changeBoxText(points);
+				speed = speed + 3;
+				speedY = speedY + 3;
+				box.css('background-color', colorStr);
 
 			};
 		})();
