add bouncing box

--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -77,27 +77,15 @@
 			var positionX = 0;
 			var positionY = 0;
 			var randNumC = Math.random() * 255;
-			var colorStr = "rgb(10, 10, randNumC)";
-			/* 
-			This function generates a random number from 0 to the boardWidth for the random 
-			x position.
-			*/
+			var colorStr = "rgb(10, 10, 10)";
 
-			function
-
-			/* 
-			This function generates a random number from 0 to boardHeight for the random 
-			y position.
-			*/
-
-			function name(params) {
-				
-			}
 			/* 
 			This function generates a random number from 0 to 255 for the box color.
 			*/
-
-			function 
+			function getRandomColor() {
+				randNumC = Math.random() * 255;
+				colorStr = "rgb(randNumC, randNumC, randNumC)";
+			}
 
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
