--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -74,18 +74,19 @@
 			var boardHeight = jQuery(window).height();
 			var randNum = Math.random() * boardWidth;
 			var randNumY = Math.random() * boardHeight;
-			var positionX = 0;
-			var positionY = 0;
-			var randNumC = Math.random() * 255;
-			var colorStr = "rgb(10, 10, 10)";
+			var positionX = randNum;
+			var positionY = randNumY;
+			var colorStr;
 
 			/* 
 			This function generates a random number from 0 to 255 for the box color.
 			*/
 			function getRandomColor() {
-				randNumC = Math.random() * 255;
-				colorStr = "rgb(randNumC, randNumC, randNumC)";
-			}
+				var x = Math.floor(Math.random() * 256);
+   				var y = Math.floor(Math.random() * 256);
+   		 		var z = Math.floor(Math.random() * 256);
+    			var colorStr = "rgb(" + x + "," + y + "," + z + ")";
+   			}
 
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
