--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -12,6 +12,7 @@
 			background-image: url(http://cdn.shopify.com/s/files/1/1061/1924/products/Smiling_Face_Emoji_grande.png?v=1571606036);
 			text-align: center;
 			color: rgb(0, 0, 0);
+			font-size: 500%;
 			text-shadow:
 				-5px -5px white,  
   			  	5px -5px white,
