add index.html file

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 padding: 10px;
             }
             .sidebar-img {
-                width: 200px;
+                width: 250px;
                 border-radius: 10px;
                 border-style: double;
                 border-color: rgb(65, 0, 119);
@@ -92,7 +92,7 @@
             <main>
                 <!-- Sidebar section -->
                 <div class="sidebar">
-                    <img class="sidebar-img" src="https://i.ibb.co/WGdCHwM/Screenshot-2021-06-04-9-32-43-AM.png">
+                    <img class="sidebar-img" src="https://www.treehugger.com/thmb/CrFdY17d34HND7fpXSsPUE6ITAU=/1409x1409/smart/filters:no_upscale()/GettyImages-989030940-cad81b4442ea4b76b88bc42be8e509a0.jpg">
                 </div>
                 <!-- Content section -->
                 <div class="content">
